# research

./: .gitignore  .gitmodules  404.html  CNAME  README.md  contributions.json  experiments.json  index.html
llm-minesweeper/: .env.example  .gitignore  README.md  adb_device.py  agent_solver.py  cli_tester.py  harness.py  image_utils.py  index.html  pyproject.toml  single_solver.py  vision_parser.py
llm-minesweeper/runs/run_1781509310/: step_0_messages.json  step_10_messages.json  step_11_messages.json  step_12_messages.json  step_13_messages.json  step_14_messages.json  step_15_messages.json  step_16_messages.json  step_17_messages.json  step_18_messages.json  step_1_messages.json  step_2_messages.json  step_3_messages.json  step_4_messages.json  step_5_messages.json  step_6_messages.json  step_7_messages.json  step_8_messages.json  step_9_messages.json
llm-minesweeper/runs/run_1781616187/: step_0_messages.json  step_10_messages.json  step_11_messages.json  step_12_messages.json  step_13_messages.json  step_14_messages.json  step_15_messages.json  step_16_messages.json  step_1_messages.json  step_2_messages.json  step_3_messages.json  step_4_messages.json  step_5_messages.json  step_6_messages.json  step_7_messages.json  step_8_messages.json  step_9_messages.json
llm-minesweeper/runs/run_1781618466/: step_0_messages.json  step_10_messages.json  step_11_messages.json  step_12_messages.json  step_1_messages.json  step_2_messages.json  step_3_messages.json  step_4_messages.json  step_5_messages.json  step_6_messages.json  step_7_messages.json  step_8_messages.json  (+1 more)
(+4 files in other folders)
